# podcast_generator

./: .gitignore  README.md  personas.json  podcast_engine.py  podcast_generator_v5.py  pyproject.toml  run.sh  setup.sh  tts_generator.py
